--- a/www/css/mapzen.whosonfirst.render.css
+++ b/www/css/mapzen.whosonfirst.render.css
@@ -4,30 +4,40 @@ ul {
     padding:0px;
 }
 
-table {
-    width:100%;
+.dumper table {
     line-height:2em;
     font-family: sans-serif;
+    width:100%;
+    border-spacing: unset;
 }
 
-tr {
+.dumper table tr {
     vertical-align: top;
     padding: 0px;
     margin: 0px;    
 }
 
-th {
+.dumper th {
     background-color:#ededed;
-    border: solid thin;
+    border: none !important;
+    border-left: solid thin !important;
+    border-right: solid thin !important;    
     text-align:left;
     margin: 0px;
-    padding: 0px;    
+    padding: .25em
 }
 
-td {
-    border-bottom: 1px solid #ededed;
+.dumper th:first-child {
+    border-top: solid thin !important;
+}
+
+.dumper th:last-child {
+    border-top: solid thin !important;
+}
+
+.dumper table td {
     text-align:left;
-    border: solid thin;    
-    padding: 0px;
+    padding: .25em;
+    padding-left: .5em;
     margin: 0px;
 }
